# barq-wasm

./: .gitignore  Cargo.toml  README.md  implementation-status.json  index.html
.github/workflows/: benchmarks.yml  ci.yml  deploy.yml
benches/: ai_bench.rs  benchmark.rs  compression_bench.rs  database_bench.rs  kernels.rs  vector_bench.rs
benchmarks/results/: apple-m4-macos.json
docs/: BENCHMARKS.md  DEVELOPMENT.md  STATUS.md  WASM.md  implementation-inventory.md
docs/browser/: benchmark.html  loader.js
examples/: basic_pattern_detection.rs  complete_bench.html
examples/wasm/: benchmark.html
pkg/: README.md  barq_wasm.d.ts  barq_wasm.js  barq_wasm_bg.wasm  barq_wasm_bg.wasm.d.ts
pkg/scalar/: README.md  barq_wasm.d.ts  barq_wasm.js  barq_wasm_bg.wasm  barq_wasm_bg.wasm.d.ts
pkg/simd/: README.md  barq_wasm.d.ts  barq_wasm.js  barq_wasm_bg.wasm  barq_wasm_bg.wasm.d.ts  package.json
scripts/: build-browser-bundles.sh  check-truthfulness.sh  generate-docs.py  verify-native-simd.sh  verify-wasm-simd.sh
src/: error.rs  executor.rs  lib.rs  main.rs  wasm_bindings.rs
src/analyzer/: ai_patterns.rs  compression_patterns.rs  database_patterns.rs  engine.rs  expr.rs  mod.rs  pattern_analyzer.rs  patterns.rs  vector_patterns.rs
src/bench/: mod.rs
src/codegen/: ai_codegen.rs  compression_codegen.rs  cranelift_backend.rs  database_codegen.rs  mod.rs  vector_codegen.rs
src/jit/: mod.rs
src/kernels/: dispatch.rs  mod.rs  scalar.rs
src/kernels/arm/: neon.rs
src/kernels/wasm32/: mod.rs  simd128.rs
src/kernels/x86/: avx2.rs
src/patterns/: ai.rs  analyzer.rs  compression.rs  database.rs  mod.rs  vectors.rs
src/runtime/: adaptive_recompilation.rs  barq_abi.rs  config.rs  memory_manager.rs  mod.rs  profiling.rs  value.rs
src/syscalls/: compression_syscalls.rs  database_syscalls.rs  mod.rs  vector_syscalls.rs
src/utils/: benchmarking.rs  config.rs  logger.rs  mod.rs
temp_bench/: wasm_bench.html
tests/: analyzer_tests.rs  bench_integrity.rs  browser.rs  cli.rs  fuzz_smoke.rs  integration_tests.rs  jit_tests.rs  kernel_differential.rs  kernel_force_env.rs  kernel_property.proptest-regressions  kernel_property.rs  runtime_integration.rs  specialization_tests.rs  truth_baseline.rs
xtask/: Cargo.toml
xtask/src/: main.rs
