[package]
name = "barq-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "barq-wasm"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-inspect"
path = "src/bin/wasm_inspect.rs"
required-features = ["inspect"]

[features]
default = ["native-runtime", "cli"]
native-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
cli = ["native-runtime", "dep:clap"]
browser = ["dep:wasm-bindgen", "getrandom/js"]
inspect = ["dep:wasmparser"]
# Deprecated alias for `browser`, kept until external build scripts migrate.
wasm = ["browser"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
wasmtime = { version = "24.0", optional = true }
wasmtime-wasi = { version = "24.0", optional = true }
wasmparser = { version = "0.215", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wat = "1.0"
proptest = "1.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
