[workspace]
members = [".", "xtask"]

[package]
name = "barq-wasm"
version = "0.6.0"
edition = "2021"
rust-version = "1.87"
default-run = "barq-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "barq-wasm"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "barq-bench"
path = "src/bin/barq_bench.rs"
required-features = ["bench-tool"]

[[bin]]
name = "wasm-inspect"
path = "src/bin/wasm_inspect.rs"
required-features = ["inspect"]

[features]
default = ["native-runtime", "cli", "analyzer"]
native-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
cli = ["native-runtime", "dep:clap"]
browser = ["dep:wasm-bindgen", "getrandom/js"]
inspect = ["dep:wasmparser"]
analyzer = ["dep:wasmparser"]
bench-tool = ["dep:serde", "dep:serde_json"]
jit-specialization = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:cranelift-module",
]
# Deprecated alias for `browser`, kept until external build scripts migrate.
wasm = ["browser"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
wasmtime = { version = "36.0.12", optional = true }
wasmtime-wasi = { version = "36.0.12", optional = true }
wasmparser = { version = "0.215", optional = true }
cranelift-codegen = { version = "0.123", optional = true }
cranelift-frontend = { version = "0.123", optional = true }
cranelift-jit = { version = "0.123", optional = true }
cranelift-native = { version = "0.123", optional = true }
cranelift-module = { version = "0.123", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wat = "1.0"
proptest = "1.4"
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "kernels"
harness = false
